Update media controls CSS classes when poster attribute is changed

This CL adds 'poster' to the list of attributes that the
MediaElementMutationCallback listens for. When changed, the CSS classes
of the media controls are updated. This fixes a bug where a poster added
after page load would not show up because it was hidden behind the
default poster.

Bug: 814956
Change-Id: I4b39e6995ddb35829d886e138fe8a1d573dd8036
Reviewed-on: https://chromium-review.googlesource.com/965589
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543767}
Former-commit-id: 33dd468c11d52696213d761254b1ec4d78829383